Fix letter spacing

--- a/v2/style.css
+++ b/v2/style.css
@@ -143,7 +143,7 @@ body {
 
 section {
     text-align: center;
-    letter-spacing: 1px;
+    letter-spacing: 1.25px;
 }
 
 .section-title {
